# tracker

./: .gitignore  Cargo.toml  README.md  install.sh
src/: browser.rs  cli.rs  console.rs  elastic.rs  lib.rs  log.rs  main.rs  utils.rs
src/console/: linux_parser.rs  mod.rs  win_parser.rs
src/elastic/: mod.rs  parser.rs
startup-files/: tracker.ps1  tracker.rc
